[project]
name = "dora-gelsight"
version = "0.1.0"
authors = [{ name = "Xu Runtian", email = "xuruntian03@163.com" }]
description = "dora-gelsight"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9, <3.11"

dependencies = [
    "dora-rs >= 0.3.9",
    "dora-rs-cli",
    "Kivy == 2.3.1",
    "Kivy-Garden == 0.1.5",
    "open3d >= 0.18.0",
    "opencv-python == 4.11.0.86",
    "pydantic == 2.10.6",
    "pydantic_core == 2.27.2",
    "scikit-image >= 0.24.0",
    "scipy >= 1.13.0",
    "torch == 2.6.0",
    "pygrabber"
]

# [project.scripts]
# dora-gelsight= "dora_gelsight.main:main"
# Add other scripts here

[project.optional-dependencies]
# dev dependencies
dev = ["ruff", "pre-commit"]
# test dependencies
test = ["pytest"]
# doc dependencies
docs = ["sphinx"]

# ruff format and lint config
[tool.ruff]
line-length = 100
indent-width = 2
# ruff format ignores
exclude = [
    ".git", ".venv", "__pypackages__",
    "build", "dist", "node_modules",
]

[tool.ruff.lint]
# 默认启用的规则集
select = ["E4", "E7", "E9", "F"]  # 基础pycodestyle和Pyflakes规则
ignore = []
fixable = ["ALL"]  # 所有规则都可自动修复
unfixable = []
extend-select = [
  "UP",   # Ruff's UP rule
  "PERF", # Ruff's PERF rule
  "RET",  # Ruff's RET rule
  "RSE",  # Ruff's RSE rule
  "NPY",  # Ruff's NPY rule
  "N",    # Ruff's N rule
  "I",   # isort (import sorting)
  "ANN"
]

# 允许下划线前缀的未使用变量
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# 格式化风格（与Black兼容）
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true# 默认不格式化文档字符串中的代码示例

# setuptools config
[tool.setuptools.packages.find]
where = ["src"]  # 源码目录
include = [
  "dora_gelsight",
  "utilities"
  # Add other dirs
  # "other_dir",
]

# add other configs
