[project]
name = "dora-pika"
version = "0.0.0"
authors = [{ name = "Your Name", email = "email@email.com" }]
description = "dora-pika"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.5"

dependencies = ["dora-rs >= 0.3.9"]

[dependency-groups]
dev = ["pytest >=8.1.1", "ruff >=0.9.1"]

[project.scripts]
dora-pika = "dora_pika.main:main"

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
  "UP"
]
